--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,16 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      canvas {
+        image-rendering: optimizeSpeed;             // Older versions of FF
+        image-rendering: -moz-crisp-edges;          // FF 6.0+
+        image-rendering: -webkit-optimize-contrast; // Webkit (non standard naming)
+        image-rendering: -o-crisp-edges;            // OS X & Windows Opera (12.02+)
+        image-rendering: crisp-edges;               // Possible future browsers.
+        -ms-interpolation-mode: nearest-neighbor;   // IE (non standard naming)
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
