--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -17,12 +17,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       canvas {
-        image-rendering: optimizeSpeed;             // Older versions of FF
-        image-rendering: -moz-crisp-edges;          // FF 6.0+
-        image-rendering: -webkit-optimize-contrast; // Webkit (non standard naming)
-        image-rendering: -o-crisp-edges;            // OS X & Windows Opera (12.02+)
-        image-rendering: crisp-edges;               // Possible future browsers.
-        -ms-interpolation-mode: nearest-neighbor;   // IE (non standard naming)
+        image-rendering: optimizeSpeed;
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: -o-crisp-edges;
+        image-rendering: crisp-edges;
+        -ms-interpolation-mode: nearest-neighbor;
       }
     </style>
     <!--
